# SimpleSAM

./: README.md  setup.cfg
SimpleSAM/: cli.py  gui.py  imagemask.py  predictor.py  prompt.py  sam.py  sam_utils.py  utils.py
SimpleSAM/tests/: test_prompt.py
