[metadata]
name = SimpleSAM
version = 0.0.1

[options]
packages = SimpleSAM
python_requires = >= 3.8
install_requires =
  torch >= 1.7
  torchvision >= 0.8
  segment-anything @ git+https://git@github.com/facebookresearch/segment-anything.git
  opencv-python 
  pycocotools 
  matplotlib 
  pysimplegui
  scikit-image


[options.entry_points]
console_scripts =
    simplesam = SimpleSAM.cli:main
